<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center_horizontal"
       android:orientation="vertical">

       <ImageView
           android:id="@+id/send"
           android:layout_marginTop="90dp"
           android:src="@drawable/send"
           android:layout_width="120dp"
           android:layout_height="120dp">

       </ImageView>
       
       <TextView
           android:text="@string/otp_verification"
           android:layout_marginTop="30dp"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="@color/colortextfirst"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

       </TextView>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="50dp"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="50dp"
           android:gravity="center"
           android:textColor="@color/colortextsecond"
           android:textSize="14sp"
           android:text="@string/we_will_send_the_otp_on_this_given_mobile_number">

       </TextView>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="30dp"
           android:layout_marginBottom="15dp"
           android:layout_marginRight="30dp"
           android:gravity="center"
           android:text="@string/enter_mobile_number"
           android:textColor="@color/colortextsecond"
           android:textSize="14sp">

       </TextView>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="60dp"
           android:layout_marginEnd="60dp"
           android:gravity="center"
           android:background="@drawable/backgroundbox"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:gravity="center"
               android:text="@string/_91"
               android:textColor="@color/colortextfirst"
               android:textSize="16sp"
               android:textStyle="bold">

           </TextView>

           <EditText
               android:id="@+id/edit1"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:background="@null"
               android:hint="@string/_6876833432"
               android:imeOptions="actionDone"
               android:importantForAutofill="no"
               android:inputType="number"
               android:maxLength="10"
               android:textColor="@color/colortextfirst"
               android:textSize="16sp"
               android:textStyle="bold">

           </EditText>


       </LinearLayout>
       
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <Button
               android:id="@+id/button1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Get OTP"
               android:layout_margin="30dp"
               android:textColor="@color/colortextfirst"
               android:textStyle="bold"
               android:background="@color/colorPrimary">

           </Button>

           <ProgressBar
               android:id="@+id/progressbar_sending_otp"
               android:layout_width="35dp"
               android:layout_height="35dp"
               android:layout_gravity="center"
               android:visibility="gone">

           </ProgressBar>

       </FrameLayout>
       

   </LinearLayout>

</ScrollView>